# Copyright © 2018 Po Huit
# [This program is licensed under the "MIT License"]
# Please see the file LICENSE in the source
# distribution of this software for license terms.

[package]
name = "plan-b"
version = "0.1.0"
authors = ["Po Huit <eve.po.huit@gmail.com>"]

[dependencies]
libflate = "0.1"
serde_json = "1.0"
min-max-heap = "1.0"
